--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5%;
  }
 
  textarea{
     all: unset;
  }
+ 
 
  .first__heading{
     text-transform: uppercase;
