--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import 
 url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@import 
+url('https://fonts.googleapis.com/css2?family=Foldit:wght@100;200;300;400;480;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -18,7 +22,11 @@ body{
  textarea{
     all: unset;
  }
- 
+ .background{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
 
  .first__heading{
     text-transform: uppercase;
@@ -26,6 +34,7 @@ body{
 
  .first__heading--special{
     font-weight: 500;
+    color: #4d4f50;
  }
  .text__del{
     display: flex;
@@ -78,6 +87,7 @@ button{
     display: flex;
     flex-direction: row;
     align-items: center;
+
 }
 
 .number_buttons{
@@ -111,7 +121,7 @@ button{
 }
 
 .btn:hover{
-    background-color: aqua;
-    transition: 5s;
+    background-color: rgb(161, 184, 184);
+    transition: 3s;
     cursor: pointer;
 }
