--- a/style.css
+++ b/style.css
@@ -10,118 +10,105 @@ url('https://fonts.googleapis.com/css2?family=Foldit:wght@100;200;300;400;480;50
     box-sizing: border-box;
 }
 
+textarea{
+    all: unset;
+}
+
 body{
     font-family: 'Inter', sans-serif;
-    background-color: #e1e8eb;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 12px;
     padding: 5%;
  }
-
- textarea{
-    all: unset;
- }
- .background{
+.background{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    max-height: 90%;
+    background-image: linear-gradient(to right,
+    rgba(101,0,163,0.9),
+    rgba(24,120,175,0.9)),
+    url('https://images.unsplash.com/photo-1546453667-8a8d2d07bc20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=100');
     display: flex;
     flex-direction: column;
     align-items: center;
- }
-
- .first__heading{
-    text-transform: uppercase;
- }
-
- .first__heading--special{
-    font-weight: 500;
-    color: #4d4f50;
- }
- .text__del{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
- }
- .textareas{
+    justify-content: center;
+}
+ .container1{
+    font-family: 'playfair';
+    width: 90%;
+    height: 80%;
     display: flex;
     flex-direction: column;
-    background-color: #b7bbbd;
-    border-radius: 5px;
-    width: 94%;
+    justify-content: center;
+    align-items: center;
+    /* background-color: antiquewhite; */
+ }
+
+ .text_area_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
  }
  
- .textarea__input{
-    border-bottom: 1px solid rgba(155, 166, 168, 0.9);
-    padding: 9px;
-    height: 20px;
-    font-weight: bold;
+.heading{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #cbced1;
+    font-size: 45px;
+}
+
+ .special_heading{
+    color: #8c9baa;
+    font-weight: 500;
+    font-style: italic;
+ }
+ .text_area_question{
+    border: solid black 1px;
+    border-radius: 10px;
+    background-color: #dbe2e9;
+    width: 90%;
+    height: 4%;
+    font-size: 35px;
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
  }
 
-.textarea__answer{
-    height: 20px;
-    padding: 15px;
-    text-align:right;
-    font-weight: bolder;
-}
+/* i{
+    border: solid black 3px;
+    border-radius: 50%;
 
-.extra__button{
-    width: 5%;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-}
-.grid_opt1{ 
-    border:2px solid black;
-    border-radius: 5px;  
-    padding: 10px;  
-    display: grid;  
-    place-items: center;
-    margin: 3px;
-}
+} */
 
-button{
-    border-style: none;
-    font-size: 20px;
-}
+ .key_container{
+    margin: 5px;
+    font-size: 40px;
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
+ }
 
-.buttons__container{
-    width: 100%;
+ button{
+    all: unset;
+ }
+
+ .special_char{
+    border: solid rgb(32, 31, 31) 2px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-
-}
-
-.number_buttons{
-    width: 85%;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items:center;
-}
-.grid__item{
-    border: 2px solid black;
+    justify-content: center;
     border-radius: 5px;
-    padding: 30px;
-    display: grid;
-    place-items: center;
-    margin: 3px;
-}
+    font-weight: 700;
+ }
 
-
-
-.operator__buttons{
-    width:14%;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-}
-.grid_opt{
-    display: grid;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 30px;
-    margin: 3px;
-}
-
-.btn:hover{
-    background-color: rgb(161, 184, 184);
-    transition: 3s;
+ button:hover{
+    color:rgb(229, 235, 235);
+    background-color: rgb(37, 46, 49);
     cursor: pointer;
-}
+    transition: all ease-in-out 2s;
+ }
